[metadata]
name = ecedi
version = 0.0.1
author = Marcelo Mora
author_email = java.diablo@gmail.com
description = Helper functions for ecuadorian electronic invoicing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcelomora/ecedi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
